Global chat button moved to the bottom of the Channel GUI. New setting to enable/disable item-names inside item formats Channel create command now have shown-by-default and permission-required arguments